# decrypt-bot

./: .gitignore  CMakeLists.txt  README.md
src/: command_parser.cpp  command_parser.hpp  main.cpp  math.cpp  math.hpp  utfconvs.hpp  wys_lib_cpp.hpp
